# cleanome

./: .example_run.sh.swp  README.md  example_run.sh  pyproject.toml  setup.py  species_list.txt
cleanome/: ChromosomeSplitter.py  _compat.py  add_mito.py  chromosome_splitter.py  debug_gtf.py  download_genomes.py  example_species_list.txt  genome_obtainment.py  get_genomes_and_stats.py  make_cellranger_arc_sh.py  make_cellranger_rna_sh.py  sanitize_gtf_source.py
cleanome/mito/: README.md  mitofinder.sh
mito/: README.md  mitofinder.sh
